--- a/testimonios.html
+++ b/testimonios.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="Esteban Arévalo Herrera"/>
@@ -8,49 +9,52 @@
 	<meta name="copyright" content="Rocío Martínez"/>
 	<meta name="description" content="Pasteleria Dunkelheit, Concepción, Münich y Tokyo"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="store.js" async></script>
+
 	<title>Dunkelheit Testimonios</title>
+
 </head>
+
 <body>
-	<header>
-		<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-			<div class="container">
-				<a class="navbar-brand" href="index.html">Dunkelheit</a>
-			        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					    <span class="navbar-toggler-icon"></span>
-				    </button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				    <ul class="navbar-nav ml-auto">
-					    <li class="nav-item active">
-						<a class="nav-link" href="store.html">Catalogo</a>
-					    </li>
-					    <li class="nav-item">
-						<a class="nav-link" href="sucursales.html">Sucursales</a>
-					    </li>
-					    <li class="nav-item">
-						<a class="nav-link" href="testimonios.html">Testimonios</a>
-					    </li>
-						<li class="nav-item">
-						<a class="nav-link" href="contactos.html">Contactos</a>
-					    </li>
-					    <li class="nav-item">
-						<a class="nav-link" href="galeria.html">Galeria Productos</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>              
+
+<div class="main">
+	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+		<div class="container">
+			<a class="navbar-brand" href="index.html">Dunkelheit</a>
+			<div class="collpase navbar-collapse" id="ftco-nav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+					<a class="nav-link" href="store.html">Catalogo</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="sucursales.html">Sucursales</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="testimonios.html">Testimonios</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="contactos.html">Contactos</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="about.html">Sobre nosotros</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+</div>
+
 <div class="testimonio">
-	<h2 class="h2"> Testimonios de nuestra distinguida clientela</h1>
+	<h1 class="title-t"> Testimonios de nuestra distinguida clientela</h1>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4">
@@ -59,8 +63,8 @@
 					<div class="img2"><img src="assets/persona1.jpeg" alt="persona1"></div>
 					<dir class="texto-main">
 						<h2>Carola Fernandez</h2>
-						<p>" Tienen variedad en productos, se pueden agendar por wsp las tortas,
-							buena atención, buena relación precio/calidad "</p>
+						<p>" Tienen variedad en productos, se pueden agendar las tortas y 
+							buena atención "</p>
 					</dir>
 				</div>
 			</div>
@@ -69,9 +73,9 @@
 					<div class="img1"><img src="assets/lugar6.jpeg" alt="lugar6"></div>
 					<div class="img2"><img src="assets/persona2.jpeg" alt="persona2"></div>
 					<dir class="texto-main">
-						<h2>Lissette Muñoz Bello</h2>
-						<p>" Una de las pocas panaderías que vende las reales pirkas y no esas con 
-							masa de hoja que parecen chaparritas. "</p>
+						<h2>Lissette Muñoz</h2>
+						<p>" Una de las panaderías que vende las reales pirkas y no con 
+							masa de hoja "</p>
 					</dir>
 				</div>
 			</div>
@@ -81,9 +85,8 @@
 					<div class="img2"><img src="assets/persona3.jpeg" alt="persona3"></div>
 					<dir class="texto-main">
 						<h2>Graciela Oyarzún</h2>
-						<p>"Un excelente lugar para degustar empanadas y otras delicias,
-							 hoy día de navidad estaba siendo atendido por sus propios dueños,
-							  buen lugar "</p>
+						<p>"Un buen lugar para degustar delicias,
+						el día de navidad estaba todo bueno "</p>
 					</dir>
 				</div>
 			</div>
@@ -93,8 +96,8 @@
 					<div class="img2"><img src="assets/persona4.jpeg" alt="persona4"></div>
 					<dir class="texto-main">
 						<h2>Natalie Lam</h2>
-						<p>" Todo muy rico, el local es super limpio y lo que más me gusta 
-							esta que abren temprano, además tambien atienden  todos los días "</p>
+						<p>" Todo rico, el local es limpio y lo que más me gusta 
+							es que abren temprano, además tambien atienden todos los días "</p>
 					</dir>
 				</div>
 			</div>
@@ -104,9 +107,8 @@
 					<div class="img2"><img src="assets/persona5.jpeg" alt="persona5"></div>
 					<dir class="texto-main">
 						<h2>大越由里子</h2>
-						<p>" Productos frescos, ricos y de buena preparación en un lugar limpio
-							 y atención del personal. Agrego que los precios son  acorde al 
-							 mercado. "</p>
+						<p>" Productos frescos, ricos y en un lugar limpio
+							 y buena atención del personal. Agrego que los precios son buenos "</p>
 					</dir>
 				</div>
 			</div>
@@ -121,42 +123,12 @@
 					</dir>
 				</div>
 			</div>
-			<div class="col-md-4">
-				<div class="tarjeta-testimonio">
-					<div class="img1"><img src="assets/lugar9.jpeg" alt="lugar9"></div>
-					<div class="img2"><img src="assets/persona7.jpeg" alt="persona7"></div>
-					<dir class="texto-main">
-						<h2>Álvaro Tapia</h2>
-						<p>" Todo muy rico, me encanta, voy a engordar con todos sus pasteles
-							 y panes de pascua. 😚🍞🍰💞 "</p>
-					</dir>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="tarjeta-testimonio">
-					<div class="img1"><img src="assets/lugar2.jpeg" alt="lugar2"></div>
-					<div class="img2"><img src="assets/persona8.jpeg" alt="persona8"></div>
-					<dir class="texto-main">
-						<h2>Jiahui Jiang</h2>
-						<p> "Una panadería con variedad en tortas,pasteles , panes , lacteos 
-							etc. Límpia y una excelente ateción. "</p>
-					</dir>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="tarjeta-testimonio">
-					<div class="img1"><img src="assets/lugar4.jpeg" alt="lugar4"></div>
-					<div class="img2"><img src="assets/persona9.jpeg" alt="persona9"></div>
-					<dir class="texto-main">
-						<h2>David Vallet</h2>
-						<p>" Excelente Pan de pascua, le pongo un 10!! Los dulces y pasteles
-							 también, me gusta 👍"</p>
-					</dir>
-				</div>
-			</div>
+
+			
 		</div>
 	</div>
 </div>
+
 <div class="footer-dark">
 	<footer>
 		<div class="container">
@@ -199,5 +171,7 @@
 	        </div>
 	</footer>
 </div>
+
 </body>
+
 </html>
