--- a/contactos.html
+++ b/contactos.html
@@ -1,105 +1,87 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="robots" content="noindex"/>
 	<meta name="description" content="Ubicación y mapa de la sucursal Concepción, Chile"/>
-	<link rel="stylesheet" href="css/styles.css">
+
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="store.js" async></script>
+
 	<title>Dunkelheit Contactos</title>
+
 </head>
+
 <body>
-	<header>
-		<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-			<div class="container">
-				<a class="navbar-brand" href="index.html">Dunkelheit</a>
-			        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					    <span class="navbar-toggler-icon"></span>
-				    </button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				    <ul class="navbar-nav ml-auto">
-					    <li class="nav-item active">
-						<a class="nav-link" href="store.html">Catalogo</a>
-					    </li>
-					    <li class="nav-item">
-						<a class="nav-link" href="sucursales.html">Sucursales</a>
-					    </li>
-					    <li class="nav-item">
-						<a class="nav-link" href="testimonios.html">Testimonios</a>
-					    </li>
-						<li class="nav-item">
-						<a class="nav-link" href="contactos.html">Contactos</a>
-					    </li>
-					    <li class="nav-item">
-						<a class="nav-link" href="galeria.html">Galeria Productos</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-		<div class="title">
-			<h1>Datos de contacto</h1>
-			<p>Estos son los datos de contacto según sucursal</p>
+<div class="main">
+	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+		<div class="container">
+			<a class="navbar-brand" href="index.html">Dunkelheit</a>
+			<div class="collpase navbar-collapse" id="ftco-nav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+					<a class="nav-link" href="store.html">Catalogo</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="sucursales.html">Sucursales</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="testimonios.html">Testimonios</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="contactos.html">Contactos</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="about.html">Sobre nosotros</a>
+					</li>
+				</ul>
+			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-4">
-				<div class="card text-center">
-					<div class="card-body">
-						<h5 class="card-title">Sucursal Baviera,    Alemania</h5>
-						<p class="card-text">Dirección: Karlsplatz 9 | 80335 München</p>
-						<p class="card-text">Telefono: +49 5642 6632</p>
-						<p class="card-text">E-mail: dunkelger@gmail.com</p>
+	</nav>
+</div>
 
+<section class="order" id="order">	
+	<div class="container">
+    	<h1 class="title-c"> Para ponerte en contacto con nosotros sobre un pedido, completa el siguiente formulario </h1>
+    		<form action="">
+				<div class="inputBox">
+					<div class="input">
+						<span>Ingresa tu nombre *</span>
+						<input type="text" placeholder="EJ: Gardenia Arévalo">
+					</div>
+					<div class="input">
+						<span>Ingresa tu telefono</span>
+						<input type="number" placeholder="EJ: +569 88888888">
 					</div>
 				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="card text-center">
-					<div class="card-body">
-						<h5 class="card-title">Sucursal Tokyo Shibuya, Japón</h5>
-						<p class="card-text">Dirección: Japón, 〒150-8510 Tokyo, Shibuya City</p>
-						<p class="card-text">Telefono: +81 5617 4364</p>
-						<p class="card-text">E-mail: dunkeljpn@gmail.com</p>
-
+				<div class="inputBox">
+					<div class="input">
+						<span>Ingresa tu email *</span>
+						<input type="email" placeholder="EJ: gardenia.arevalo@gmail.com">
+					</div>
+					<div class="input">
+						<span>Ingresa el número de pedido *</span>
+						<input type="number" placeholder="EJ: 3213312">
 					</div>
 				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="card text-center">
-					<div class="card-body">
-						<h5 class="card-title">Sucursal Concepción, Chile</h5>
-						<p class="card-text">Dirección: Av. Chacabuco 1275, Concepción, Bío Bío</p>
-						<p class="card-text">Telefono: +569 5618 6650</p>
-						<p class="card-text">E-mail: dunkelchile@gmail.com</p>
-
+				<div class="inputBox">
+					<div class="input">
+						<span>Mensaje y motivo de contacto *</span>
+						<textarea name="" placeholder="EJ: Pastel fue solicitado sin ganash de chocolate y con manjar" id="" cols="30" rows="10"></textarea>
 					</div>
 				</div>
-			</div>                 
-		</div>
-        <h2 class="contact">Mapa de nuestra sucursal Concepción</h2>		
-            <div class="gmap_canvas">
-                <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=san%20diego%20concepcion&t=&z=17&ie=UTF8&iwloc=&output=embed"
-                frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
-                </iframe>
-                    <a href="https://fmovies-online.net"></a>
-                        <br>
-                            <style>.mapouter{position:relative;text-align:right;height:500px;width:1080px;}
-                            </style>
-                                <a href="https://www.embedgooglemap.net">how to embed google map in html</a>
-                                    <style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:100%;}</style>
-			</div>
-    </div>
+				<input type="submit" value="¡Enviar ahora!" class="btn">
+    </form>
+</section>
 <div class="footer-dark">
 	<footer>
 		<div class="container">
@@ -142,5 +124,7 @@
 	        </div>
 	</footer>
 </div>
+
 </body>
+
 </html>
