--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="Esteban Arévalo Herrera"/>
@@ -8,73 +9,68 @@
 	<meta name="copyright" content="Rocío Martínez"/>
 	<meta name="description" content="Pasteleria Dunkelheit, Concepción, Münich y Tokyo"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+
 	<script src="store.js" async></script>
+
 	<title>Dunkelheit Home</title>
+
 </head>
+
 <body>
-	<header>
-		<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-			<div class="container">
-				<a class="navbar-brand" href="index.html">Dunkelheit</a>
-			        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					    <span class="navbar-toggler-icon"></span>
-				    </button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				    <ul class="navbar-nav ml-auto">
-					    <li class="nav-item active">
-						<a class="nav-link" href="store.html">Catalogo</a>
-					    </li>
-					    <li class="nav-item">
-						<a class="nav-link" href="sucursales.html">Sucursales</a>
-					    </li>
-					    <li class="nav-item">
-						<a class="nav-link" href="testimonios.html">Testimonios</a>
-					    </li>
-						<li class="nav-item">
-						<a class="nav-link" href="contactos.html">Contactos</a>
-					    </li>
-					    <li class="nav-item">
-						<a class="nav-link" href="galeria.html">Galeria Productos</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-<section>
-	<div id="demo" class="carousel slide" data-ride="carousel">
-		<ul class="carousel-indicators">
-			<li data-target="#demo" data-slide-to="0" class="active"></li>
-			<li data-target="#demo" data-slide-to="1"></li>
-			<li data-target="#demo" data-slide-to="2"></li>
-		</ul>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="assets/cake1.jpeg" alt="Pastel1">
-				</div>
-				<div class="carousel-item">
-					<img src="assets/cake2.jpeg" alt="Pastel2">
-				</div>
-				<div class="carousel-item">
-					<img src="assets/cake3.jpeg" alt="Pastel3">
-				</div>
+
+<div class="main">
+	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+		<div class="container">
+			<a class="navbar-brand" href="index.html">Dunkelheit</a>
+			<div class="collpase navbar-collapse" id="ftco-nav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+					<a class="nav-link" href="store.html">Catalogo</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="sucursales.html">Sucursales</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="testimonios.html">Testimonios</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="contactos.html">Contactos</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="about.html">Sobre nosotros</a>
+					</li>
+				</ul>
 			</div>
-			    <a class="carousel-control-prev" href="#demo" data-slide="prev">
-				    <span class="carousel-control-prev-icon"></span>
-			    </a>
-			    <a class="carousel-control-next" href="#demo" data-slide="next">
-				    <span class="carousel-control-next-icon"></span>
-			    </a>
-	</div>
-</section>               
+		</div>
+	</nav>
+</div>
+
+<section class="home" id="home">
+	<div class="swiper-container home-slider">
+		<div class="swiper-wrapper wrapper">
+			<div class="swiper-slide slide">
+				<div class="content">
+					<span>Especialidad de la casa</span>
+					<h3>Cakes!</h3>
+					<p>Expertos en pastelería y panadería</p>
+					<a href="store.html" class="btn">Catálogo</a>
+				</div>
+				<div class="image">
+					<img src="assets/b1.png" alt="">
+				</div>
+			</div>	
+		</div>		
+</section>
+
 <div class="footer-dark">
 	<footer>
 		<div class="container">
@@ -94,8 +90,6 @@
 							<p>Opción 1: Compra Telefonica</p>
 							<p>Opción 2: Reserva de mesas</p>
 							<p>Opción 3: Servicio al cliente</p>
-							<p>Opción 4: Contacto con ejecutivo</p>
-							<p>Opción 5: Reclamos y sugerencias</p>
 					</div>
 						<div class="col-md-6 item text">
 							<h3>Dunkelheit</h3>
@@ -117,5 +111,7 @@
 			</div>
 	</footer>
 </div>
+
 </body>
+
 </html>
